--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "prebuild": "npm run test",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "now-build": "react-scripts build && mv build dist",
+    "test": "CI=true react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "now --prod ./build"
