--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "Anonygram-client",
   "icons": [
     {
-      "src": "assets/icon.png",
-      "sizes": "512x512",
+      "src": "favicon.ico",
+      "sizes": "16x16",
       "type": "image/x-icon"
     }
   ],
